# rust-cover-letter

./: .env.example  Cargo.toml  README.MD  tree.txt
migrations/2025-02-21-003243_create_users/: up.sql
src/: db.rs  main.rs  middleware.rs  models.rs  schema.rs
src/middleware/: auth.rs
src/routes/: auth.rs  job.rs  mod.rs  user.rs
