[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chatgpt_rs_fork = "1.2.4"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
diesel = { version = "2.1", features = ["mysql", "r2d2"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.17.0"